--- a/carousel/style.css
+++ b/carousel/style.css
@@ -7,7 +7,7 @@
     width: 60%;
     margin: auto;
     border: 5px solid #000;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 .carousel-slide {
     width:700%;
