--- a/active-box/style/_mixins.scss
+++ b/active-box/style/_mixins.scss
@@ -3,3 +3,8 @@
     align-items: $align;
     justify-content: $justify;
 }
+@mixin innerwrap() {
+    max-width: 1170px;
+    height: 100%;
+    margin: 0 auto;
+}
