--- a/active-box/style/_reset.scss
+++ b/active-box/style/_reset.scss
@@ -47,6 +47,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     a {
         text-decoration: none;
     }
+    img {
+      vertical-align: top;
+    }
 
     #wrap {
         width: 100%;
