--- a/active-box/style/_variables.scss
+++ b/active-box/style/_variables.scss
@@ -7,5 +7,8 @@ $pointColor: #e84545;
 /* font-size */
 $defaultFont: 14px;
 
+/* content gray font color */
+$descolor: #6c7279;
+
 /* btn */
 $btnpaddig: 19px 52px;
