--- a/scss/scss/style.scss
+++ b/scss/scss/style.scss
@@ -154,5 +154,14 @@ $color-group: (red, steelblue, slateblue);
 }
 
 
+$red: red;
 
+.exam {
+    width: random() * 500px;
+    height: 500px;
+    background: steelblue;
+    &::after {
+        content: quote($red);
+    }
+}
 
