--- a/painbox/scss/style.scss
+++ b/painbox/scss/style.scss
@@ -20,6 +20,14 @@ a {
 }
 section {
     text-align: center;
+    
+    &.js-fade {
+        opacity: 0;
+        transition: 0.5s;
+        &.on {
+            opacity: 1;
+        }
+    }
 }
 .sec02 .inner {
     max-width: 1920px;
